only one right click event trigger
Signed-off-by: Bartolomeo <1050602964@qq.com>

--- a/rightClick.html
+++ b/rightClick.html
@@ -57,6 +57,7 @@
             //if(e.event.event.button===2){
                 //e中有当前节点信息
             if(e.button===2){
+                menubox2.hide();
                 showMenu(e,[
                     {
                         "name": "菜单1",
@@ -80,6 +81,7 @@
                 //e中有当前节点信息
             let option = myChart2.getOption();   
             if(e.button===2){
+                menubox1.hide();
                 showMenu(e,[
                     {
                         "name": "显示均值线",
